src/test/fail/bad_right_brace.ly
###
SyntaxError: Unexpected token ']'.
Where: File "test/fail/bad_right_brace.ly" at line 6
###

list[integer] a = []   a = [10]]
